--- a/index.html
+++ b/index.html
@@ -11,8 +11,54 @@
 </head>
 
 <body>
-    <nav class="navbar"></nav>
-    <section class="main"></section>
+    <nav class="navbar">
+        <div class="left-nav">
+            <a href="#">
+                furni.shop
+            </a>
+        </div>
+        <div class="main-nav">
+            <div class="home">
+                <a href="#">Home</a>
+            </div>
+            <div class="about">
+                <a href="#about">
+                    About
+                </a>
+            </div>
+            <div class="features">
+                <a href="#features">
+                    Features
+                </a>
+            </div>
+            <div class="contact">
+                <a href="#contact">Contact</a>
+            </div>
+        </div>
+        <div class="right-nav">
+            <div class="search">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+                </svg>
+            </div>
+            <div class="menu">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+                </svg>
+            </div>
+        </div>
+    </nav>
+    <section class="main">
+        <div class="main_dotted"></div>
+        <div class="main_contents"></div>
+        <div class="main_image"></div>
+        <div class="main_download"></div>
+        <div class="main_scroll"></div>
+    </section>
     <section class="trusted_company"></section>
     <section class="hot_deals"></section>
     <section class="about_us"></section>
