--- a/index.html
+++ b/index.html
@@ -53,24 +53,130 @@
         </div>
     </nav>
     <section class="main">
-        <div class="main_dotted"></div>
-        <div class="main_contents"></div>
-        <div class="main_image"></div>
-        <div class="main_download"></div>
-        <div class="main_scroll"></div>
+        <div class="main_dotted">
+            <div class="main_dotted1">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="main_dotted1">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="main_dotted1">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="main_dotted1">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="main_dotted1">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="main_dotted1">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="main_dotted1">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="main_dotted1">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+        <div class="main_contents">
+            <h1>We Help You Make Modern Interior</h1>
+            <p>we will help you to make an elegant and luxurious interior deisgn by professional interior designer</p>
+        </div>
+        <div class="main_image">
+            <img src="ServMove.jpg" alt="main_image" class="main_images">
+        </div>
+        <div class=" main_download ">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down"
+                viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                    d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
+            </svg>
+        </div>
+        <div class=" main_scroll ">
+            <div class="scroll_arrow">
+                <div class="scrollup">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-caret-up-fill" viewBox="0 0 16 16">
+                        <path
+                            d="m7.247 4.86-4.796 5.481c-.566.647-.106 1.659.753 1.659h9.592a1 1 0 0 0 .753-1.659l-4.796-5.48a1 1 0 0 0-1.506 0z" />
+                    </svg>
+                </div>
+                <div class="scrolldown">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                        <path
+                            d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z" />
+                    </svg>
+                </div>
+            </div>
+            <div class="scroll_num">
+                01 <br> | <br> | <br> 06
+            </div>
+        </div>
     </section>
-    <section class="trusted_company"></section>
-    <section class="hot_deals"></section>
-    <section class="about_us"></section>
-    <section class="products"></section>
-    <section class="clients"></section>
-    <footer class="footer"></footer>
+
+
+    <section class=" trusted_company "></section>
+    <section class=" hot_deals "></section>
+    <section class=" about_us "></section>
+    <section class=" products "></section>
+    <section class=" clients "></section>
+    <footer class=" footer "></footer>
 
     <!-- javscript functionality and bootstraps -->
-    <script src="App.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous"></script>
+    <script src=" App.js "></script>
+    <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js "
+        integrity=" sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm "
+        crossorigin=" anonymous "></script>
 </body>
 
 </html>
