about us design

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                 </svg>
             </div>
             <div class="menu">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
-                    viewBox="0 0 16 16">
-                    <path fill-rule="evenodd"
-                        d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-filter-right" viewBox="0 0 16 16">
+                    <path
+                        d="M14 10.5a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0 0 1h3a.5.5 0 0 0 .5-.5zm0-3a.5.5 0 0 0-.5-.5h-7a.5.5 0 0 0 0 1h7a.5.5 0 0 0 .5-.5zm0-3a.5.5 0 0 0-.5-.5h-11a.5.5 0 0 0 0 1h11a.5.5 0 0 0 .5-.5z" />
                 </svg>
             </div>
         </div>
@@ -163,11 +163,134 @@
             </div>
         </div>
     </section>
+    <section class=" trusted_company ">
+        <div class="trusted_content">
+            <h4>TRUSTED BY OVER 1K+ COMPANIES</h4>
+        </div>
+        <div class="company_logos">
+            <div>
+                <img src="microsoft.png" alt="microsoft_logo" height="30">
+            </div>
+            <div>
+                <img src="Entrepreneuar.jpg" alt="Entrepreneuar_logo" height="30">
+            </div>
+            <div>
+                <img src="fortune.jpg" alt="fortune_logo" height="30">
+            </div>
+            <div>
+                <img src="business-web-logo.png" alt="business-web-logo" height="30">
+            </div>
+            <div>
+                <img src="mashable.png" alt="mashable_logo" height="30">
+            </div>
+        </div>
+    </section>
+    <section class=" hot_deals ">
+        <div class="hot_left">
+            <h1>
+                Hot 🔥 Deals For You
+            </h1>
+            <p>Online shopping for retail sales direct to consumers</p>
+        </div>
+        <div class="hot_right">
+            <div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tags"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M3 2v4.586l7 7L14.586 9l-7-7H3zM2 2a1 1 0 0 1 1-1h4.586a1 1 0 0 1 .707.293l7 7a1 1 0 0 1 0 1.414l-4.586 4.586a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 2 6.586V2z" />
+                    <path
+                        d="M5.5 5a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1zm0 1a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3zM1 7.086a1 1 0 0 0 .293.707L8.75 15.25l-.043.043a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 0 7.586V3a1 1 0 0 1 1-1v5.086z" />
+                </svg>
+                <h4>
+                    1.5% Cashback
+                </h4>
+                <p>Online shopping for retail sales direct to consumers</p>
+            </div>
+            <div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tags"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M3 2v4.586l7 7L14.586 9l-7-7H3zM2 2a1 1 0 0 1 1-1h4.586a1 1 0 0 1 .707.293l7 7a1 1 0 0 1 0 1.414l-4.586 4.586a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 2 6.586V2z" />
+                    <path
+                        d="M5.5 5a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1zm0 1a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3zM1 7.086a1 1 0 0 0 .293.707L8.75 15.25l-.043.043a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 0 7.586V3a1 1 0 0 1 1-1v5.086z" />
+                </svg>
+                <h4>
+                    30-days terms
+                </h4>
+                <p>Online shopping for retail sales direct to consumers</p>
+            </div>
+            <div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tags"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M3 2v4.586l7 7L14.586 9l-7-7H3zM2 2a1 1 0 0 1 1-1h4.586a1 1 0 0 1 .707.293l7 7a1 1 0 0 1 0 1.414l-4.586 4.586a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 2 6.586V2z" />
+                    <path
+                        d="M5.5 5a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1zm0 1a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3zM1 7.086a1 1 0 0 0 .293.707L8.75 15.25l-.043.043a1 1 0 0 1-1.414 0l-7-7A1 1 0 0 1 0 7.586V3a1 1 0 0 1 1-1v5.086z" />
+                </svg>
+                <h4>
+                    Save Money
+                </h4>
+                <p>Online shopping for retail sales direct to consumers</p>
+            </div>
+        </div>
+    </section>
+
+    <section class=" about_us ">
+        <div class="top" id="about">
+            <div class="left_top">
+                <h1>About Us</h1>
+                <p>At besnik consultancy we take pride in or values <br> -service, integrity and excellence</p>
+            </div>
+            <div class="right_top">
+                <button>
+                    learn More
+                </button>
+            </div>
+        </div>
+        <div class="bottom">
+            <div class="left_bottom">
+                <div class="top_right_bottom">
+                    <div>
+                        <h1>1.</h1>
+                        <h4>Who We Are</h4>
+                        <p>you get a 3-week free trials to kick the <br> security wise we want you too</p>
+                    </div>
+                    <div>
+                        <h1>2.</h1>
+                        <h4>What Do We Do</h4>
+                        <p>you get a 3-week free trials to kick the <br> security wise we want you too</p>
+                    </div>
+                </div>
+                <div class="bottom_right_bottom">
+                    <div>
+                        <h1>3.</h1>
+                        <h4>How Do We Help</h4>
+                        <p>you get a 3-week free trials to kick the <br> security wise we want you too</p>
+                    </div>
+                    <div>
+                        <h1>4.</h1>
+                        <h4>Create Success Story</h4>
+                        <p>you get a 3-week free trials to kick the <br> security wise we want you too</p>
+                    </div>
+                </div>
+            </div>
+            <div class="right_bottom">
+                <div class="left_right_bottom">
+                    <div><img src="bench_set.jpg" alt="bench_set"></div>
+                    <div><img src="half_sofa.jpg" alt="half-sofa"></div>
+                </div>
+                <div class="right_right_bottom">
+                    <div><img src="images.jpg" alt="images"></div>
+                    <div><img src="sofaframe.jpg" alt="sofaframe"></div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
-    <section class=" trusted_company "></section>
-    <section class=" hot_deals "></section>
-    <section class=" about_us "></section>
+
+
+
     <section class=" products "></section>
     <section class=" clients "></section>
     <footer class=" footer "></footer>
