--- a/index.html
+++ b/index.html
@@ -234,7 +234,6 @@
             </div>
         </div>
     </section>
-
     <section class=" about_us ">
         <div class="top" id="about">
             <div class="left_top">
@@ -253,24 +252,24 @@
                     <div>
                         <h1>1.</h1>
                         <h4>Who We Are</h4>
-                        <p>you get a 3-week free trials to kick the <br> security wise we want you too</p>
+                        <p>you get a 3-week free trials to kick the security wise we want you too.</p>
                     </div>
                     <div>
                         <h1>2.</h1>
                         <h4>What Do We Do</h4>
-                        <p>you get a 3-week free trials to kick the <br> security wise we want you too</p>
+                        <p>you get a 3-week free trials to kick the security wise we want you too.</p>
                     </div>
                 </div>
                 <div class="bottom_right_bottom">
                     <div>
                         <h1>3.</h1>
                         <h4>How Do We Help</h4>
-                        <p>you get a 3-week free trials to kick the <br> security wise we want you too</p>
+                        <p>you get a 3-week free trials to kick the security wise we want you too.</p>
                     </div>
                     <div>
                         <h1>4.</h1>
                         <h4>Create Success Story</h4>
-                        <p>you get a 3-week free trials to kick the <br> security wise we want you too</p>
+                        <p>you get a 3-week free trials to kick the security wise we want you too.</p>
                     </div>
                 </div>
             </div>
@@ -286,13 +285,189 @@
             </div>
         </div>
     </section>
+    <section class=" products ">
+        <div class="products_top">
+            <div>
+                <h1>Products</h1>
+            </div>
+            <div class="see-all">
+                <h6>See all</h6>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-arrow-right" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
+                </svg>
+            </div>
+        </div>
+        <div class="products_nav">
+            <div>
+                <h6>All</h6>
+            </div>
+            <div>
+                <h6>Bed</h6>
+            </div>
+            <div>
+                <h6>Sofa</h6>
+            </div>
+            <div>
+                <h6>Chair</h6>
+            </div>
+            <div>
+                <h6>Light</h6>
+            </div>
+        </div>
+        <div class="products_bottom">
+            <div class="products_bottom_top">
+                <div>
+                    <div class="cart">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-cart-plus" viewBox="0 0 16 16">
+                            <path
+                                d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9V5.5z" />
+                            <path
+                                d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+                        </svg>
+                    </div>
+                    <div class="item-detail">
+                        <h3>
+                            Hand Base Lamp
+                        </h3>
+                        <h6>$35</h6>
+                    </div>
+                    <div class="item-img">
+                        <img src="handbaselamp.avif" alt="handbaselamp">
+                    </div>
+                </div>
+                <div>
+                    <div class="cart">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-cart-plus" viewBox="0 0 16 16">
+                            <path
+                                d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9V5.5z" />
+                            <path
+                                d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+                        </svg>
+                    </div>
+                    <div class="item-detail">
+                        <h3>
+                            Vintage Chair
+                        </h3>
+                        <h6>$35</h6>
+                    </div>
+                    <div class="item-img">
+                        <img src="vintageChair4.avif" alt="vintageChair">
+                    </div>
+                </div>
+                <div>
+                    <div class="cart">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-cart-plus" viewBox="0 0 16 16">
+                            <path
+                                d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9V5.5z" />
+                            <path
+                                d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+                        </svg>
+                    </div>
+                    <div class="item-detail">
+                        <h3>
+                            Lamp Tool
+                        </h3>
+                        <h6>$35</h6>
+                    </div>
+                    <div class="item-img">
+                        <img src="lamptool2.avif" alt="lamptool">
+                    </div>
+                </div>
+            </div>
+            <div class="products_bottom_bottom">
+                <div>
+                    <div class="cart">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-cart-plus" viewBox="0 0 16 16">
+                            <path
+                                d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9V5.5z" />
+                            <path
+                                d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+                        </svg>
+                    </div>
+                    <div class="item-detail">
+                        <h3>
+                            Stylish Chair
+                        </h3>
+                        <h6>$35</h6>
+                    </div>
+                    <div class="item-img">
+                        <img src="stylishchair1.avif" alt="stylishchair">
+                    </div>
+                </div>
+                <div>
+                    <div class="cart">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-cart-plus" viewBox="0 0 16 16">
+                            <path
+                                d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9V5.5z" />
+                            <path
+                                d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+                        </svg>
+                    </div>
+                    <div class="item-detail">
+                        <h3>
+                            Vintage Chair
+                        </h3>
+                        <h6>$35</h6>
+                    </div>
+                    <div class="item-img">
+                        <img src="vintageChair5.avif" alt="">
+                    </div>
+                </div>
+                <div>
+                    <div class="cart">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-cart-plus" viewBox="0 0 16 16">
+                            <path
+                                d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9V5.5z" />
+                            <path
+                                d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+                        </svg>
+                    </div>
+                    <div class="item-detail">
+                        <h3>
+                            Stackable Chair
+                        </h3>
+                        <h6>$35</h6>
+                    </div>
+                    <div class="item-img">
+                        <img src="stackablechair.avif" alt="stackablechair">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class=" clients ">
+        <div class="client_top">
+            <div class="client_top_left">
+                <h1>What Our Happy <br> Client Say</h1>
+                <p>file storage made easy - including powerfull features <br> you won't fine anywhere else. Whether
+                    you're
+                </p>
+            </div>
+            <div class="client_top_right">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-shield-lock" viewBox="0 0 16 16">
+                    <path
+                        d="M5.338 1.59a61.44 61.44 0 0 0-2.837.856.481.481 0 0 0-.328.39c-.554 4.157.726 7.19 2.253 9.188a10.725 10.725 0 0 0 2.287 2.233c.346.244.652.42.893.533.12.057.218.095.293.118a.55.55 0 0 0 .101.025.615.615 0 0 0 .1-.025c.076-.023.174-.061.294-.118.24-.113.547-.29.893-.533a10.726 10.726 0 0 0 2.287-2.233c1.527-1.997 2.807-5.031 2.253-9.188a.48.48 0 0 0-.328-.39c-.651-.213-1.75-.56-2.837-.855C9.552 1.29 8.531 1.067 8 1.067c-.53 0-1.552.223-2.662.524zM5.072.56C6.157.265 7.31 0 8 0s1.843.265 2.928.56c1.11.3 2.229.655 2.887.87a1.54 1.54 0 0 1 1.044 1.262c.596 4.477-.787 7.795-2.465 9.99a11.775 11.775 0 0 1-2.517 2.453 7.159 7.159 0 0 1-1.048.625c-.28.132-.581.24-.829.24s-.548-.108-.829-.24a7.158 7.158 0 0 1-1.048-.625 11.777 11.777 0 0 1-2.517-2.453C1.928 10.487.545 7.169 1.141 2.692A1.54 1.54 0 0 1 2.185 1.43 62.456 62.456 0 0 1 5.072.56z" />
+                    <path
+                        d="M9.5 6.5a1.5 1.5 0 0 1-1 1.415l.385 1.99a.5.5 0 0 1-.491.595h-.788a.5.5 0 0 1-.49-.595l.384-1.99a1.5 1.5 0 1 1 2-1.415z" />
+                </svg>
+            </div>
+        </div>
+        <div class="client_bottom"></div>
+    </section>
 
 
 
 
-
-    <section class=" products "></section>
-    <section class=" clients "></section>
     <footer class=" footer "></footer>
 
     <!-- javscript functionality and bootstraps -->
