--- a/index.html
+++ b/index.html
@@ -443,7 +443,6 @@
             </div>
         </div>
     </section>
-
     <section class=" clients ">
         <div class="client_top">
             <div class="client_top_left">
@@ -464,11 +463,7 @@
         </div>
         <div class="client_bottom">
             <div class="client_star">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                    class="bi bi-star-fill" viewBox="0 0 16 16">
-                    <path
-                        d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-                </svg>
+                ⭐
             </div>
             <div class="client_hero">
                 <img src="hero.jpg" alt="hero">
@@ -498,11 +493,61 @@
             </div>
         </div>
     </section>
-
-
-
-
-    <footer class=" footer "></footer>
+    <footer class=" footer ">
+        <div class="footer_top">
+            <div class="footer_top_left">
+                <h1>Start Your Business Today <br> For $0+ State Fees</h1>
+            </div>
+            <div class="footer_top_right">
+                <button>Get Started</button>
+                <button>Contact Sales</button>
+            </div>
+        </div>
+        <div class="footer_bottom">
+            <div class="footer_bottom_left">
+                <h1>furni.shop</h1>
+                <p>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Maiores, labore.</p>
+            </div>
+            <div class="footer_bottom_right">
+                <div class="unitytype">
+                    <h3>Unity Types</h3>
+                    <ul>
+                        <li>knowledge base</li>
+                        <li>security</li>
+                        <li>privacy policy</li>
+                        <li>partners</li>
+                    </ul>
+                </div>
+                <div class="service">
+                    <h3>Services</h3>
+                    <ul>
+                        <li>contact us</li>
+                        <li>prices</li>
+                        <li>payrool</li>
+                        <li>Library</li>
+                    </ul>
+                </div>
+                <div class="responses">
+                    <h3>Responses</h3>
+                    <ul>
+                        <li>pricing</li>
+                        <li>FAQs</li>
+                        <li>Contact Support</li>
+                        <li>privacy policy</li>
+                    </ul>
+                </div>
+                <div class="support">
+                    <h3>Support</h3>
+                    <ul>
+                        <li>Contact</li>
+                        <li>All dues</li>
+                        <li>start up</li>
+                        <li>Cancellation Policy</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- javscript functionality and bootstraps -->
     <script src=" App.js "></script>
